create custom hooks to get window size and advise on isDesktop. Logo 'src' is updated based on the viewport

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
       "@styles/*": ["styles/*"],
       "@config/*": ["config/*"],
       "@features/*": ["features/*"],
-      "@typings/*": ["typings/*"]
+      "@typings/*": ["typings/*"],
+      "@hooks/*": ["hooks/*"]
     },
     "noEmit": true
   },
